# LangChain_LangGraph_Practice

./: .gitignore
React_Front/: package-lock.json  package.json
backend/: .env.example  .gitignore  README.md  TODO.md  agent.py  langgraph.json  package-lock.json  package.json  pyproject.toml  server.py
backend/research_agent/: __init__.py  tools.py
frontend/: next.config.ts  package.json
frontend/src/app/components/: ChartRenderer.tsx  ToolCallBox.tsx  test.tsx  test2.tsx
